spacing issue

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -23,7 +23,7 @@
 
 .columns.columns-transform-teaser > div {
   display: grid;
-  grid-template-columns: 40% 55%;
+  grid-template-columns: 45% 55%;
   padding: var(--spacing-xhuge) 0 66px;
   position: relative;
 }
@@ -188,10 +188,6 @@
 @media (width >= 1024px) {
   .columns.columns-transform-teaser > div p:nth-child(1) {
     line-height: 44px;
-  }
-
-  .columns.columns-transform-teaser > div p:nth-child(2) {
-    line-height: 28px;
   }
 
   .columns.columns-transform-teaser > div p:nth-child(3) {
